@startuml

title __IMPL's Class Diagram__\n

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicEdge {
          - distance : int
          + BasicEdge()
          + getDistance()
          + getVertex1()
          + getVertex2()
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicGraph {
          - edges : Set<BasicEdge>
          - vertexes : Set<Vertex>
          + BasicGraph()
          + addEdge()
          + getDistance()
          + getSuccessors()
          + getVertex()
          + getVertexes()
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicMinDistance {
          - minDistances : Map<Vertex, Integer>
          + BasicMinDistance()
          + getMinDistance()
          + getMinDistanceVertex()
          + setMinDistance()
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicShortestPaths {
          - previousEdges : Map<Vertex, Vertex>
          + BasicShortestPaths()
          + getShortestPath()
          + setPrevious()
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicVertex {
          - name : String
          + BasicVertex()
          + getLabel()
          + getSuccessors()
      }
    }
  }
  

  namespace com.example.telecom.paris.maze.graph {
    namespace impl {
      class com.example.telecom.paris.maze.graph.impl.BasicVertexesSet {
          ~ processedVertexes : Set<Vertex>
          + BasicVertexesSet()
          + add()
          + contains()
      }
    }
  }
  

  com.example.telecom.paris.maze.graph.impl.BasicEdge o-- com.example.telecom.paris.maze.graph.Vertex : vertex1
  com.example.telecom.paris.maze.graph.impl.BasicEdge o-- com.example.telecom.paris.maze.graph.Vertex : vertex2
  com.example.telecom.paris.maze.graph.impl.BasicGraph .up.|> com.example.telecom.paris.maze.graph.Distance
  com.example.telecom.paris.maze.graph.impl.BasicGraph .up.|> com.example.telecom.paris.maze.graph.Graph
  com.example.telecom.paris.maze.graph.impl.BasicMinDistance .up.|> com.example.telecom.paris.maze.graph.MinDistance
  com.example.telecom.paris.maze.graph.impl.BasicShortestPaths .up.|> com.example.telecom.paris.maze.graph.ShortestPaths
  com.example.telecom.paris.maze.graph.impl.BasicVertex .up.|> com.example.telecom.paris.maze.graph.Vertex
  com.example.telecom.paris.maze.graph.impl.BasicVertex o-- com.example.telecom.paris.maze.graph.Graph : graph
  com.example.telecom.paris.maze.graph.impl.BasicVertexesSet .up.|> com.example.telecom.paris.maze.graph.ProcessedVertexesSet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
